--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "node scripts/migrate.mjs"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
@@ -14,6 +15,7 @@
     "@sanity/vision": "^3.69.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.2",
     "next-sanity": "^9.8.35",
@@ -21,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^11.0.3",
     "sanity": "^3.69.0",
     "styled-components": "^6.1.14"
   },
