--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate": "node scripts/migrate.mjs"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.4.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.69.0",
     "axios": "^1.7.9",
@@ -22,9 +22,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
-    "react-redux": "^9.1.2",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.3",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sanity": "^3.69.0",
+    "shipengine": "^1.0.7",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
