Payment Method Added

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.69.0",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.3.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
@@ -37,6 +39,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/redux-persist": "^4.3.1",
+    "@types/stripe": "^8.0.416",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
